# instructionkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  ROADMAP_PERSONAL.md  UX_PATTERNS_RESEARCH.md  instructionkit.yaml  pyproject.toml  tasks.py
.githooks/: pre-push
.github/: CI_CD_SETUP.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  code-review.yml  pr-automation.yml  publish.yml  release-drafter.yml
aiconfigkit/: __main__.py
aiconfigkit/ai_tools/: base.py  capability_registry.py  claude.py  claude_desktop.py  copilot.py  cursor.py  detector.py  mcp_syncer.py  translator.py  winsurf.py
aiconfigkit/cli/: delete.py  download.py  install.py  install_new.py  list.py  main.py  mcp_configure.py  mcp_install.py  mcp_sync.py  package.py  package_install.py  template.py  template_backup.py  template_init.py  template_install.py  template_list.py  template_uninstall.py  template_update.py  template_validate.py  tools.py  uninstall.py  update.py
aiconfigkit/core/: conflict_resolution.py  git_operations.py  models.py  package_manifest.py  repository.py  template_manifest.py  version.py
aiconfigkit/storage/: library.py  mcp_tracker.py  package_tracker.py  template_library.py  template_tracker.py  tracker.py
aiconfigkit/tui/: __init__.py  installer.py
aiconfigkit/utils/: backup.py  dotenv.py  git_helpers.py  logging.py  namespace.py  paths.py  project.py  streaming.py  ui.py  validation.py
docs/: advanced.md  cli-reference.md  mcp.md  templates.md
docs/tutorials/: README.md  small-team-shared-standards.md  solo-developer-personal-projects.md  solo-developer-sync-across-computers.md
example-instructions/: instructionkit.yaml
example-instructions/instructions/: create-instruction-repo.md  instructionkit-repo-creator.md  quick-start.md
example-package/: README.md  ai-config-kit-package.yaml
example-package/commands/: test.sh
example-package/hooks/: pre-commit.sh
example-package/instructions/: code-quality.md  testing-strategy.md
example-package/mcp/: filesystem.json
example-package/resources/: .gitignore
instructionkit/: __main__.py
instructionkit/ai_tools/: base.py  claude.py  claude_desktop.py  copilot.py  cursor.py  detector.py  mcp_syncer.py  winsurf.py
instructionkit/cli/: delete.py  download.py  install.py  install_new.py  list.py  main.py  mcp_configure.py  mcp_install.py  mcp_sync.py  template_backup.py  template_init.py  template_install.py  template_list.py  template_uninstall.py  template_update.py  template_validate.py  tools.py  uninstall.py  update.py
instructionkit/core/: checksum.py  conflict_resolution.py  git_operations.py  models.py  repository.py  template_manifest.py
instructionkit/storage/: library.py  template_library.py  template_tracker.py  tracker.py
instructionkit/tui/: __init__.py  installer.py
instructionkit/utils/: atomic_write.py  backup.py  dotenv.py  logging.py  paths.py  project.py  ui.py  validation.py
specs/001-example-instruction-repo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-function-calling-spec/: plan.md  spec.md
specs/001-git-repo-versioning/: plan.md  research.md  spec.md  tasks.md
specs/002-template-sync-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mcp-server-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-config-package/: ARCHITECTURE_REVIEW.md  SPEC_UPDATE_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/e2e/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_basic_workflows.py  test_comprehensive.py  test_conflict_resolution.py  test_git_operations.py  test_multi_package.py  test_version_management.py
tests/integration/: test_library.py  test_mcp_install.py  test_repository.py  test_tracker.py
tests/unit/: test_ai_tools_base.py  test_ai_tools_claude.py  test_ai_tools_copilot.py  test_ai_tools_cursor.py  test_ai_tools_detector.py  test_ai_tools_winsurf.py  test_checksum.py  test_cli_delete.py  test_cli_tools.py  (+24 more)
(+35 files in other folders)
