[build-system]
requires = ["setuptools<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-config-kit"
version = "0.4.0"
description = "Distribute and sync AI coding assistant configurations across teams"
readme = "README.md"
authors = [{ name = "Troy Larson", email = "troy@calvinware.com" }]
requires-python = ">=3.10"
license = { text = "MIT License" }
keywords = ["cli", "ai", "config", "mcp", "cursor", "copilot", "claude", "windsurf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "textual>=0.41.0",
    "GitPython>=3.1.45",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "invoke>=2.0.0",
    "build>=1.2.1",
    "twine>=5.0.0",
    "types-PyYAML>=6.0.12.20240808",
]

[project.scripts]
aiconfig = "aiconfigkit.cli.main:app"

[project.urls]
Homepage = "https://github.com/troylar/ai-config-kit"
Documentation = "https://github.com/troylar/ai-config-kit#readme"
Repository = "https://github.com/troylar/ai-config-kit"
Issues = "https://github.com/troylar/ai-config-kit/issues"

[tool.setuptools.packages.find]
include = ["aiconfigkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=aiconfigkit --cov-report=term-missing -p no:cacheprovider"

[tool.coverage.run]
relative_files = true
source = ["aiconfigkit"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
